force-app/main/default/objects/Eraser_Configuration__mdt/Eraser_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Eraser is the third party application. Which is used to create flow diagram and entity diagram.</description>
    <label>Eraser Configuration</label>
    <pluralLabel>Eraser Configurations</pluralLabel>
</CustomObject>