force-app/main/default/objects/Eraser_Configuration__mdt/fields/BearerToken__c.field-meta.xml
<CustomField>
    <fullName>BearerToken__c</fullName>
    <label>Bearer Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>