force-app/main/default/objects/Eraser_Configuration__mdt/fields/Diagram_Title__c.field-meta.xml
<CustomField>
    <fullName>Diagram_Title__c</fullName>
    <label>Diagram Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>