force-app/main/default/objects/Eraser_Configuration__mdt/fields/Diagram_Type__c.field-meta.xml
<CustomField>
    <fullName>Diagram_Type__c</fullName>
    <label>Diagram Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>